--- a/app/src/main/res/drawable/rounded_orange_solid2.xml
+++ b/app/src/main/res/drawable/rounded_orange_solid2.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorPointBG"/>
+    <solid android:color="@color/colorPoint"/>
     <corners
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
