--- a/app/src/main/res/layout/my_meeting_card.xml
+++ b/app/src/main/res/layout/my_meeting_card.xml
@@ -1,102 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/bg"
     android:layout_height="wrap_content"
-    android:layout_width="350dp"
-    android:orientation="vertical"
-    android:background="@drawable/rounded_clean"
-    android:layout_gravity="center_horizontal">
-    <RelativeLayout
-        android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_gravity="center_horizontal"
+    android:weightSum="25">
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"></LinearLayout>
+    <LinearLayout
+        android:id="@+id/bg"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"
+        android:orientation="vertical"
+        android:background="@drawable/rounded_clean"
+        android:layout_weight="23"
         >
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:orientation="vertical">
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
+            >
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/point_line1"
-                    android:layout_width="4dp"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/point_line_2vs2">
-                </ImageView>
-                <TextView
-                    android:id="@+id/label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="24dp"
-                    android:text="2:2 미팅"
-                    android:textColor="@color/colorBlack"
-                    android:layout_marginLeft="8dp"
-                    android:gravity="center_vertical"
-                    android:textSize="18dp"
-                    android:fontFamily="@font/nanumgothic_font_family">
-                </TextView>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="7dp">
-                <ImageView
-                    android:id="@+id/point_line2"
-                    android:layout_width="4dp"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/point_line_2vs2">
-                </ImageView>
-                <TextView
-                    android:id="@+id/date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="24dp"
-                    android:text="11월 23일 (토)"
-                    android:textColor="@color/colorBlack"
-                    android:layout_marginLeft="8dp"
-                    android:gravity="center_vertical"
-                    android:textSize="18dp"
-                    android:fontFamily="@font/nanumgothic_font_family">
-                </TextView>
-            </LinearLayout>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/right_panel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:orientation="vertical">
-            <LinearLayout
-                android:id="@+id/btn_edit_card"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                >
-                <ImageView
-                    android:id="@+id/icon_edit_card"
+                android:layout_alignParentLeft="true"
+                android:orientation="vertical">
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/icon_edit"
-                    android:layout_gravity="center_vertical"
-                    />
-                <TextView
-                    android:id="@+id/text_edit_card"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/point_line1"
+                        android:layout_width="4dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/point_line_2vs2">
+                    </ImageView>
+                    <TextView
+                        android:id="@+id/label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="24dp"
+                        android:text="2:2 미팅"
+                        android:textColor="@color/colorBlack"
+                        android:layout_marginLeft="8dp"
+                        android:gravity="center_vertical"
+                        android:textSize="18dp"
+                        android:fontFamily="@font/nanumgothic_font_family_extrabold">
+                    </TextView>
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="미팅 수정"
-                    android:textSize="15dp"
-                    android:textColor="@color/colorNonselect"
-                    android:gravity="center_vertical"
-                    android:fontFamily="@font/nanumgothic_font_family"
-                    />
+                    android:orientation="horizontal"
+                    android:layout_marginTop="7dp">
+                    <ImageView
+                        android:id="@+id/point_line2"
+                        android:layout_width="4dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/point_line_2vs2">
+                    </ImageView>
+                    <TextView
+                        android:id="@+id/date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="24dp"
+                        android:text="11월 23일 (토)"
+                        android:textColor="@color/colorBlack"
+                        android:layout_marginLeft="8dp"
+                        android:gravity="center_vertical"
+                        android:textSize="18dp"
+                        android:fontFamily="@font/nanumgothic_font_family_extrabold">
+                    </TextView>
+                </LinearLayout>
             </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/right_panel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:id="@+id/btn_edit_card"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    >
+                    <ImageView
+                        android:id="@+id/icon_edit_card"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/icon_edit"
+                        android:layout_gravity="center_vertical"
+                        />
+
+                    <TextView
+                        android:id="@+id/text_edit_card"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/nanumgothic_font_family"
+                        android:gravity="center_vertical"
+                        android:text="미팅 수정"
+                        android:textColor="@color/colorNonselect"
+                        android:textSize="15dp" />
+                </LinearLayout>
                 <TextView
                     android:id="@+id/label_matching"
                     android:layout_width="wrap_content"
@@ -104,52 +115,59 @@
                     android:text="매칭 대기중!"
                     android:textColor="@color/colorBlack"
                     android:textSize="27dp"
-                    android:fontFamily="@font/binggrae_font_family"/>
-        </LinearLayout>
-    </RelativeLayout>
-    <FrameLayout
-        android:id="@+id/bottom_panel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp">
-        <Button
-            android:id="@+id/btn_view_applying"
-            android:layout_width="wrap_content"
-            android:layout_height="53dp"
-            android:layout_gravity="center_horizontal"
-            style="?android:attr/borderlessButtonStyle"
-            android:text="신청팀 보기 (2)"
-            android:textColor="@color/colorPoint"
-            android:textSize="16dp"
-            android:fontFamily="@font/nanumgothic_font_family"
-
-            >
-        </Button>
-        <LinearLayout
-            android:id="@+id/profile_panel"
+                    android:fontFamily="@font/binggrae_font_family_bold"/>
+            </LinearLayout>
+        </RelativeLayout>
+        <FrameLayout
+            android:id="@+id/bottom_panel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:visibility="gone">
-            <TextView
-                android:id="@+id/tv_nickname_and_age"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp">
+
+            <Button
+                android:id="@+id/btn_view_applying"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="subbus (27)"
-                android:textSize="18dp"
-                android:fontFamily="@font/binggrae_font_family">
-            </TextView>
-            <TextView
-                android:id="@+id/tv_belong_and_department"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="연세대, 전기전자공학부"
+                android:layout_height="53dp"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/nanumgothic_font_family_extrabold"
+                android:text="신청팀 보기 (2)"
+                android:textColor="@color/colorPoint"
                 android:textSize="16dp"
-                android:fontFamily="@font/binggrae_font_family">
-            </TextView>
-        </LinearLayout>
-    </FrameLayout>
+
+                ></Button>
+
+            <LinearLayout
+                android:id="@+id/profile_panel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp"
+                android:visibility="gone">
+                <TextView
+                    android:id="@+id/tv_nickname_and_age"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="subbus (27)"
+                    android:textSize="18dp"
+                    android:fontFamily="@font/binggrae_font_family">
+                </TextView>
+                <TextView
+                    android:id="@+id/tv_belong_and_department"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="연세대, 전기전자공학부"
+                    android:textSize="16dp"
+                    android:fontFamily="@font/binggrae_font_family">
+                </TextView>
+            </LinearLayout>
+        </FrameLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+    </LinearLayout>
 </LinearLayout>
