--- a/app/src/main/res/layout/meeting_team_wlist.xml
+++ b/app/src/main/res/layout/meeting_team_wlist.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/bg"
-    android:layout_height="209dp"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_gravity="center_horizontal"
@@ -10,58 +9,57 @@
     android:paddingLeft="12.6dp"
     android:paddingRight="12.6dp"
     >
+
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="44dp"
+        android:layout_gravity="bottom">
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:layout_gravity="bottom">
+            android:orientation="vertical">
 
-            <FrameLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
-                android:orientation="vertical">
+                android:layout_gravity="bottom"
+                android:background="@drawable/bottom_rounded_brown"
+                android:orientation="horizontal">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:layout_gravity="bottom"
-                    android:background="@drawable/bottom_rounded_brown"
-                    android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/profile1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:fontFamily="@font/roboto_font_family"
+                    android:text="subbus (24)"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="14dp" />
 
-                    <TextView
-                        android:id="@+id/profile1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="16dp"
-                        android:fontFamily="@font/roboto_font_family"
-                        android:text="subbus (24)"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="14dp" />
+                <TextView
+                    android:id="@+id/profile2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="16dp"
+                    android:fontFamily="@font/roboto_font_family"
+                    android:text="연세대학교, 전기전자공학부"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="14dp" />
+            </RelativeLayout>
+            <ImageView
+                android:id="@+id/point_line"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:background="@color/colorPoint">
 
-                    <TextView
-                        android:id="@+id/profile2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="16dp"
-                        android:fontFamily="@font/roboto_font_family"
-                        android:text="연세대학교, 전기전자공학부"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="14dp" />
-                </RelativeLayout>
-                <ImageView
-                    android:id="@+id/point_line"
-                    android:layout_width="match_parent"
-                    android:layout_height="4dp"
-                    android:background="@color/colorPoint">
-
-                </ImageView>
-            </FrameLayout>
+            </ImageView>
         </FrameLayout>
+    </FrameLayout>
     <RelativeLayout
         android:id="@+id/rl_applying"
         android:layout_width="match_parent"
@@ -80,11 +78,15 @@
             android:textSize="14dp"
             android:layout_marginBottom="5dp"/>
     </RelativeLayout>
-
+    <LinearLayout
+        android:id="@+id/bg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <LinearLayout
             android:id="@+id/top_bg"
             android:layout_width="match_parent"
-            android:layout_height="165dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/top_rounded_with_orange_line"
             android:orientation="vertical">
 
@@ -151,9 +153,10 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="95dp"
-                android:layout_marginTop="22dp"
-                android:weightSum="28">
+                android:layout_height="wrap_content"
+                android:weightSum="28"
+                android:orientation="horizontal"
+                android:paddingBottom="22dp">
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -163,9 +166,10 @@
                     android:id="@+id/iv_profile"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:src="@drawable/user_profile_no_img"
-                    android:layout_weight="7"/>
+                    android:layout_weight="7"
+                    android:layout_marginTop="22dp"
+                    />
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -175,7 +179,6 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="18">
-
                     <WebView
                         android:id="@+id/description"
                         android:layout_width="wrap_content"
@@ -191,5 +194,10 @@
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </FrameLayout>
-</LinearLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:visibility="invisible">
+        </FrameLayout>
+    </LinearLayout>
+</FrameLayout>
